fixed .new class overlap

--- a/src/features/post/post.css
+++ b/src/features/post/post.css
@@ -242,8 +242,8 @@
 .seeMore:hover {
 	color: grey;
 }
-.new,
-.new * {
+.commentItem.new,
+.commentItem.new * {
 	animation-duration: 2s;
 	animation-name: new;
 	animation-iteration-count: 1;
